tests/baselines/reference/ClassDeclaration10.errors.txt
ClassDeclaration10.ts(2,4): error TS2390: Constructor implementation is missing.
ClassDeclaration10.ts(3,4): error TS2391: Function implementation is missing or not immediately following the declaration.


==== ClassDeclaration10.ts (2 errors) ====
    class C {
       constructor();
       ~~~~~~~~~~~
!!! error TS2390: Constructor implementation is missing.
       foo();
       ~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
    }